--- a/opencode/oh-my-opencode.jsonc
+++ b/opencode/oh-my-opencode.jsonc
@@ -1,267 +1,1 @@
-{
-  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
-
-  // --------------------------------------------------------------------------------------
-  // НАСТРОЙКИ АГЕНТОВ (AGENTS)
-  // Переопределение моделей, температур и прав доступа для встроенных агентов.
-  // --------------------------------------------------------------------------------------
-  "agents": {
-    // Sisyphus: Главный оркестратор.
-    // Рекомендуется: claude-opus-4-5 (лучший), gpt-5.2 (альтернатива)
-    "Sisyphus": {
-      "model": "openai/gpt-5.2",
-      "temperature": 0.1,
-      "description": "Главный оркестратор. Планирует, делегирует и управляет задачами.",
-    },
-
-    // Oracle: Архитектор и консультант.
-    // Используется для сложных решений и ревью кода.
-    "oracle": {
-      "model": "openai/gpt-5.2",
-      "temperature": 0.1,
-    },
-
-    // Librarian: Библиотекарь.
-    // Поиск документации, примеров кода на GitHub и работа с внешними библиотеками.
-    "librarian": {
-      "model": "google/antigravity-gemini-3-flash",
-    },
-
-    // Explore: Исследователь кодовой базы.
-    // Быстрый поиск по локальным файлам (grep/glob/ast).
-    "explore": {
-      "model": "google/antigravity-gemini-3-flash",
-    },
-
-    // Frontend UI/UX Engineer: Фронтендер.
-    // Специалист по верстке, CSS, анимациям и React компонентам.
-    "frontend-ui-ux-engineer": {
-      "model": "google/antigravity-gemini-3-pro-high",
-    },
-
-    // Document Writer: Технический писатель.
-    // Создание README, документации API и руководств.
-    "document-writer": {
-      "model": "google/antigravity-gemini-3-flash",
-    },
-
-    // Multimodal Looker: Визуальный аналитик.
-    // Анализ изображений, PDF и скриншотов.
-    "multimodal-looker": {
-      "model": "google/antigravity-gemini-3-flash",
-    },
-
-    // Стандартные агенты OpenCode (можно переопределить)
-    "build": { "model": "openai/gpt-5.2" },
-    "plan": { "model": "openai/gpt-5.2" },
-
-    // Специализированные версии Сизифа
-    "OpenCode-Builder": { "model": "openai/gpt-5.2" },
-
-    // ----------------------------------------------------------------
-    // Специализированные агенты планирования (The Planning Trinity)
-    // ----------------------------------------------------------------
-
-    // Prometheus (Planner): Стратег.
-    // Создает детальные планы работы, проводит интервью требований.
-    "Prometheus (Planner)": {
-      "model": "openai/gpt-5.2",
-      "temperature": 0.2,
-    },
-
-    // Metis (Plan Consultant): Консультант.
-    // Анализирует задачу ДО составления плана на предмет рисков и скрытых требований.
-    "Metis (Plan Consultant)": {
-      "model": "openai/gpt-5.2",
-      "temperature": 0.3,
-    },
-
-    // Momus (Plan Reviewer): Рецензент.
-    // Валидирует и проверяет планы на полноту и корректность (High Accuracy Mode).
-    "Momus (Plan Reviewer)": {
-      "model": "openai/gpt-5.2",
-      "temperature": 0.1,
-    },
-  },
-
-  // --------------------------------------------------------------------------------------
-  // КОНФИГУРАЦИЯ СИЗИФА (SISYPHUS ORCHESTRATOR)
-  // Управление поведением главного агента.
-  // --------------------------------------------------------------------------------------
-  "sisyphus_agent": {
-    // disabled: Полностью отключить Сизифа и использовать стандартных агентов OpenCode.
-    "disabled": false,
-
-    // default_builder_enabled: Включить стандартного агента сборки OpenCode (обычно отключен в пользу Сизифа).
-    "default_builder_enabled": false,
-
-    // planner_enabled: Включить агента планирования (Prometheus).
-    "planner_enabled": true,
-
-    // replace_plan: Заменить стандартного агента планирования на Prometheus.
-    "replace_plan": true,
-  },
-
-  // --------------------------------------------------------------------------------------
-  // ЦИКЛ РАЛЬФА (RALPH LOOP)
-  // Автономный цикл выполнения задач ("работай пока не сделаешь").
-  // Запускается командой /ralph-loop
-  // --------------------------------------------------------------------------------------
-  "ralph_loop": {
-    // enabled: Разрешить использование цикла.
-    "enabled": true,
-
-    // default_max_iterations: Максимальное количество итераций до принудительной остановки.
-    "default_max_iterations": 100,
-
-    // state_dir: Директория для хранения состояния цикла (опционально).
-    // "state_dir": "~/.opencode/ralph-state"
-  },
-
-  // --------------------------------------------------------------------------------------
-  // ФОНОВЫЕ ЗАДАЧИ (BACKGROUND TASKS)
-  // Настройки параллельного выполнения агентов.
-  // --------------------------------------------------------------------------------------
-  "background_task": {
-    // defaultConcurrency: Общее ограничение на количество одновременных задач.
-    "defaultConcurrency": 5,
-
-    // providerConcurrency: Ограничения по провайдерам API.
-    "providerConcurrency": {
-      "anthropic": 3,
-      "openai": 5,
-      "google": 10,
-    },
-
-    // modelConcurrency: Ограничения для конкретных моделей (например, чтобы экономить дорогие токены Opus).
-    "modelConcurrency": {
-      "anthropic/claude-opus-4-5": 2,
-      "google/gemini-3-flash": 10,
-    },
-  },
-
-  // --------------------------------------------------------------------------------------
-  // КАТЕГОРИИ ЗАДАЧ (CATEGORIES)
-  // Пресеты для делегирования задач (инструмент delegate_task).
-  // --------------------------------------------------------------------------------------
-  "categories": {
-    // visual: Для работы с UI/UX. Высокая креативность.
-    "visual": {
-      "model": "google/gemini-3-pro-preview",
-      "temperature": 0.7,
-      "prompt_append": "Focus on modern aesthetics, responsiveness, and clean CSS/Tailwind.",
-    },
-    // business-logic: Для бэкенда и сложной логики. Низкая температура.
-    "business-logic": {
-      "model": "openai/gpt-5.2",
-      "temperature": 0.1,
-      "prompt_append": "Focus on robustness, error handling, and type safety.",
-    },
-  },
-
-  // --------------------------------------------------------------------------------------
-  // СОВМЕСТИМОСТЬ С CLAUDE CODE (CLAUDE CODE COMPATIBILITY)
-  // Поддержка конфигураций и хуков от Claude Code.
-  // --------------------------------------------------------------------------------------
-  "claude_code": {
-    // mcp: Загружать .mcp.json файлы конфигурации.
-    "mcp": true,
-    // commands: Загружать пользовательские команды из .claude/commands.
-    "commands": true,
-    // skills: Загружать навыки из .claude/skills.
-    "skills": true,
-    // agents: Загружать определения агентов из .claude/agents.
-    "agents": true,
-    // hooks: Исполнять хуки из .claude/settings.json.
-    "hooks": true,
-    // plugins: Поддержка плагинов Claude Code.
-    "plugins": true,
-    // plugins_override: Выборочное отключение плагинов.
-    "plugins_override": {
-      // "plugin-name": false
-    },
-  },
-
-  // --------------------------------------------------------------------------------------
-  // GIT MASTER
-  // Настройки навыка работы с Git.
-  // --------------------------------------------------------------------------------------
-  "git_master": {
-    // commit_footer: Добавлять "Ultraworked with Sisyphus" в футер коммитов.
-    "commit_footer": false,
-    // include_co_authored_by: Добавлять "Co-authored-by: Sisyphus" в коммиты.
-    "include_co_authored_by": false,
-  },
-
-  // --------------------------------------------------------------------------------------
-  // ЭКСПЕРИМЕНТАЛЬНЫЕ ФУНКЦИИ (EXPERIMENTAL)
-  // Функции, которые находятся в бета-тестировании.
-  // --------------------------------------------------------------------------------------
-  "experimental": {
-    // auto_resume: Автоматически возобновлять сессию после ошибок API или блокировки "думания".
-    "auto_resume": true,
-
-    // aggressive_truncation: Агрессивно обрезать вывод инструментов при нехватке контекста.
-    "aggressive_truncation": true,
-
-    // truncate_all_tool_outputs: Обрезать вывод ВСЕХ инструментов (а не только 'read', 'grep').
-    "truncate_all_tool_outputs": true,
-
-    // preemptive_compaction: Сжимать историю сессии ДО достижения лимита токенов (на 85%).
-    "preemptive_compaction": true,
-
-    // Динамическая очистка контекста
-    "dynamic_context_pruning": {
-      "enabled": true,
-      "notification": "detailed", // "off", "minimal", "detailed"
-      "turn_protection": {
-        "enabled": true,
-        "turns": 3, // Сколько последних ходов не трогать
-      },
-    },
-  },
-
-  // --------------------------------------------------------------------------------------
-  // ОТКЛЮЧЕНИЕ ФУНКЦИЙ (DISABLE FEATURES)
-  // Списки для полного отключения определенных возможностей.
-  // --------------------------------------------------------------------------------------
-
-  // disabled_mcps: Отключить встроенные MCP серверы.
-  // Доступные: "websearch" (Exa), "context7" (Docs), "grep_app" (GitHub Search)
-  "disabled_mcps": [],
-
-  // disabled_skills: Отключить встроенные навыки.
-  // Доступные: "playwright" (браузер), "git-master" (git)
-  "disabled_skills": [],
-
-  // disabled_agents: Отключить встроенных агентов.
-  // Доступные: "oracle", "librarian", "explore", "frontend-ui-ux-engineer", ...
-  "disabled_agents": [],
-
-  // disabled_hooks: Отключить системные хуки OhMyOpenCode.
-  // Примеры:
-  // "comment-checker" (проверка комментов),
-  // "todo-continuation-enforcer" (принудительное выполнение todo),
-  // "auto-update-checker" (проверка обновлений плагина)
-  "disabled_hooks": [],
-
-  // --------------------------------------------------------------------------------------
-  // GOOGLE AUTH
-  // Использовать ли встроенную (устаревшую) авторизацию Google.
-  // Рекомендуется использовать плагин opencode-antigravity-auth вместо этого.
-  // --------------------------------------------------------------------------------------
-  "google_auth": false,
-
-  // --------------------------------------------------------------------------------------
-  // LSP (LANGUAGE SERVER PROTOCOL)
-  // Дополнительные настройки LSP серверов (помимо основного конфига opencode.json).
-  // --------------------------------------------------------------------------------------
-  "lsp": {
-    // Пример настройки TypeScript
-    // "typescript-language-server": {
-    //   "command": ["typescript-language-server", "--stdio"],
-    //   "extensions": [".ts", ".tsx"],
-    //   "priority": 10
-    // }
-  },
-}
+oh-my-opencode_openai.jsonc
