--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -2,14 +2,14 @@
   "$schema": "https://opencode.ai/config.json",
   "plugin": [
     // Core
-    "oh-my-opencode@3.0.0-beta.9",
+    "oh-my-opencode@3.0.0-beta.10",
 
     // Auth
     "opencode-openai-codex-auth@4.4.0",
-    "opencode-antigravity-auth@1.2.8",
+    "opencode-antigravity-auth@1.3.0",
 
     // Misc
-    "@plannotator/opencode@0.6.4",
+    "@plannotator/opencode@0.6.5",
     "@franlol/opencode-md-table-formatter@0.0.3",
     "@nick-vi/opencode-type-inject@1.3.1",
     "@bastiangx/opencode-unmoji@0.3.11",
@@ -34,7 +34,7 @@
   },
   "keybinds": {
     "leader": "ctrl+s",
-    "app_exit": "ctrl+q",
+    "app_exit": "ctrl+x",
     "editor_open": "ctrl+e",
   },
   "provider": {
