--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -2,14 +2,14 @@
   "$schema": "https://opencode.ai/config.json",
   "plugin": [
     // Core
-    "oh-my-opencode@3.0.0-beta.10",
+    "oh-my-opencode@3.0.0-beta.11",
 
     // Auth
     "opencode-openai-codex-auth@4.4.0",
     "opencode-antigravity-auth@1.3.0",
 
     // Misc
-    "@plannotator/opencode@0.6.5",
+    "@plannotator/opencode@0.6.7",
     "@franlol/opencode-md-table-formatter@0.0.3",
     "@nick-vi/opencode-type-inject@1.3.1",
     "@bastiangx/opencode-unmoji@0.3.11",
@@ -18,6 +18,11 @@
     "mcpproxy": {
       "type": "remote",
       "url": "http://localhost:8080/mcp/",
+      "enabled": true,
+    },
+    "vercel": {
+      "type": "remote",
+      "url": "https://mcp.vercel.com",
       "enabled": true,
     },
     "playwriter": {
