--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -194,7 +194,7 @@ prepend_keymap = [
   { on = [ "g", "i", ], run = "plugin lazygit", desc = "Run lazygit" },
   { on = [ "g", "r", ], run = 'shell -- ya emit cd "$(git rev-parse --show-toplevel)"', desc = "Go root of the current Git repository" },
   { on = [ "c", "a", ], run = "plugin ouch", desc = "Archive selected files" },
-  { on = "f", run = "plugin easyjump", desc = "plugin easyjump" },
+  { on = "f", run = "plugin searchjump", desc = "searchjump mode" },
 ]
 
 [tasks]
